@@ -42,6 +42,10 @@
 				<field-name>password</field-name>
 			</cmp-field>
 			<cmp-field>
+				<description>User's email</description>
+				<field-name>email</field-name>
+			</cmp-field>
+			<cmp-field>
 				<description>User's active state</description>
 				<field-name>active</field-name>
 			</cmp-field>
